<resources>
    <string name="app_name">GOPP</string>

    <!--            LoginActivity           -->
    <string name="descriptorLogo">Logo</string>

    <string name="hintTextUsername">Nome de Usuário</string>
    <string name="hintTextPassword">Senha</string>
    <string name="checkBoxRememberMe">Lembrar-me</string>
    <string name="buttonLogin">Entrar</string>
    <!--            LoginActivity            -->

    <!--////////////////////////////////////-->

    <!--            MainActivity            -->
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="descriptorUserPhoto">Foto do Usuário</string>
    <string name="scanLabel">Verificar Produto</string>
    <string name="expirationManagerLabel">Gestão de Validade</string>
    <string name="salesManagerLabel">Gestão de Ofertas</string>

    <string name="action_logout">Sair</string>
    <string name="action_endereco">Cadastro endereços</string>
    <!--            MainActivity            -->

    <!--////////////////////////////////////-->

    <!--            ScanActivity            -->
    <string name="estoqueLabel">Estoque</string>
    <string name="priceLabel">Preço</string>
    <string name="validadeLabel">Validade</string>
    <string name="pedidoLabel">Pedido</string>
    <string name="estoqueTextDefault">0</string>
    <string name="priceTextDefault">R$ 0,00</string>
    <string name="validadeTextDefault">Sem validade cadastrada</string>
    <string name="pedidoTextDefault">Sem Pedidos</string>
    <string name="scanAgain">Ler outro código de barras</string>
    <string name="editValidade">Atualizar a validade</string>
    <!--            ScanActivity            -->

    <!--            SearchAddressActivity         -->
    <string name="textoLoja">LOJA</string>
    <string name="textoEstoque">ESTOQUE</string>
    <string name="textoPerguntaLojaEstoque">Loja ou Estoque ?</string>
    <string name="cancelar">CANCELAR</string>
    <string name="action_search">busca</string>

    <!--            SearchAddressActivity         -->


</resources>
