<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_barcode"
            android:title="@string/scanLabel" />
        <item
            android:id="@+id/expiration_management"
            android:icon="@drawable/ic_gest_validade"
            android:title="@string/expirationManagerLabel" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_gest_ofertas"
            android:title="@string/salesManagerLabel" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/scanLabel"
            android:visible="false"/>
    </group>

    <item android:title="@string/scanLabel"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/scanLabel"
                android:visible="false" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/scanLabel"
                android:visible="false" />
        </menu>
    </item>

</menu>
