<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.admin.estoquescan.ScanActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/txtTextSize">
            <TextView
                android:id="@+id/labelEstoque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estoqueLabel"
                android:textSize="@dimen/labelTextSize"
                android:textStyle="bold"
                android:freezesText="true"/>
            <TextView
                android:id="@+id/textEstoque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distanceFromLabel"
                android:text="@string/estoqueTextDefault"
                android:textSize="@dimen/txtTextSize"
                android:freezesText="true"/>

            <TextView
                android:id="@+id/labelPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distanceBetweenItems"
                android:text="@string/precoLabel"
                android:textSize="@dimen/labelTextSize"
                android:textStyle="bold"
                android:freezesText="true"/>
            <TextView
                android:id="@+id/textPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distanceFromLabel"
                android:text="@string/precoTextDefault"
                android:textSize="@dimen/txtTextSize"
                android:freezesText="true"/>

            <TextView
                android:id="@+id/labelValidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distanceBetweenItems"
                android:text="@string/validadeLabel"
                android:textSize="@dimen/labelTextSize"
                android:textStyle="bold"
                android:freezesText="true"/>
            <TextView
                android:id="@+id/textValidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distanceFromLabel"
                android:text="@string/validadeTextDefault"
                android:textSize="@dimen/txtTextSize"
                android:freezesText="true"/>

            <TextView
                android:id="@+id/labelPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distanceBetweenItems"
                android:text="@string/pedidoLabel"
                android:textSize="@dimen/labelTextSize"
                android:textStyle="bold"
                android:freezesText="true"/>
            <TextView
                android:id="@+id/textPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distanceFromLabel"
                android:text="@string/pedidoTextDefault"
                android:textSize="@dimen/txtTextSize"
                android:freezesText="true"/>

            <Button
                android:id="@+id/editValidade"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightBtn"
                android:layout_marginTop="50sp"
                android:text="@string/editValidade"
                android:freezesText="true"/>

            <Button
                android:id="@+id/scan_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightBtn"
                android:layout_marginBottom="166dp"
                android:text="@string/scan"
                android:freezesText="true"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
